# cmake

./: generators.md  selecting_compilers.md
MultiFileProject/: CMakeLists.txt  main.cpp
MultiFileProject/include/: dog.h
MultiFileProject/logger/include/: log.h
MultiFileProject/logger/src/: log.cpp
MultiFileProject/src/: dog.cpp  operations.cpp
hello-world/: CMakeLists.txt  main.cpp
